--- a/XYZReader/src/main/res/values/attrs.xml
+++ b/XYZReader/src/main/res/values/attrs.xml
@@ -1,5 +1,6 @@
 <resources>
-    <declare-styleable name="DrawInsetsFrameLayout">
-        <attr name="insetBackground" format="color|reference" />
+    <declare-styleable name = "DrawInsetsFrameLayout">
+        <attr name = "insetBackground"
+              format = "color|reference"/>
     </declare-styleable>
 </resources>
