--- a/XYZReader/src/main/res/values/styles.xml
+++ b/XYZReader/src/main/res/values/styles.xml
@@ -17,12 +17,13 @@
 
 <resources>
 
-    <style name="Theme.Bacon" parent="@style/Theme.AppCompat.Light.NoActionBar">
+    <style name = "Theme.Bacon"
+           parent = "@style/Theme.AppCompat.Light.NoActionBar">
 
     </style>
 
-    <style name="Theme.Bacon.Detail">
-        <item name="android:statusBarColor">@android:color/transparent</item>
+    <style name = "Theme.Bacon.Detail">
+        <item name = "android:statusBarColor">@android:color/transparent</item>
     </style>
 
 </resources>
