--- a/XYZReader/src/main/res/values/colors.xml
+++ b/XYZReader/src/main/res/values/colors.xml
@@ -18,8 +18,11 @@
 <resources>
     <color name = "photo_placeholder">#ccc</color>
 
-    <color name = "theme_primary">#04561A</color>
-    <color name = "theme_primary_dark">#04561A</color>
-    <color name = "theme_accent">#04561A</color>
+    <color name = "theme_primary">#795548</color>
+    <!-- brown_500-->
+    <color name = "theme_primary_dark">#5D4037</color>
+    <!-- brown_700-->
+    <color name = "theme_accent">#FFD740</color>
+    <!--amber_a200-->
     <color name = "ltgray">#ffe0e0e0</color>
 </resources>
